# FlagData

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
all2txt/: outputs1.json  pdf2txt.py
config/: cleaner_config.yaml  distillation_config.yaml
deduplication/: addTwoDigits.py  udf_spark_addTwoDigits.py
docs/: tutorial_02_analysis.md  tutorial_03_condensation.md  tutorial_04_text_annotation.md  tutorial_05_image_annotation.md
flagdata/all2txt/: README.md  README_zh.md  epub2txt.py  pdf2txt.py
flagdata/analysis/: README.md  README_zh.md  average_rotation_analysis.py  draw_pie_chart.py  field_distribution_analysis.py  language_distribution_analysis.py  nested_pie_chart.py  text_analyzer.py  text_length_analysis.py
flagdata/analysis/data/: average_rounds_data.jsonl  (+1 more)
flagdata/cleaner/: arxiv_cleaner.py  base_cleaner.py  book_cleaner.py  cleaner_builder.py  html_cleaner.py  qa_cleaner.py  text_cleaner.py  tutorial_01_cleaner.md
flagdata/condensation/: data_distillation.py
flagdata/data_gen/: README.md  README_zh.md  example.py  prompt_template.py  strategy.py  utils.py
flagdata/data_operator/: Operator.md  Operator_ZH.md  __init__.py  base_operator.py  make_data.py  new_data.csv  new_data.json  new_data.parquet  new_data.tsv  test.py  test_data.csv  test_data.json  test_data.parquet  test_data.tsv
flagdata/deduplication/: README.md  README_zh.md  minhash.py  stringMatching.py  udf_spark_stringMatching.py
flagdata/language_identification/: README.md  README_zh.md  readMe.md  split_by_lang.py
flagdata/quality_assessment/: README.md  README_zh.md
gpt4_data_gen/: example.py  prompt_template.py
language_identification/: split_by_lang.py
quickstart/analysis/: run_analysis.py
quickstart/cleaner/: run_cleaner.py  run_custom_cleaner.py
quickstart/condensation/: run_distillation.py
sft/: draw_pie_chart.py
tests/: test_analysis.py  test_cleaner.py
(+93 files in other folders)
